- created events/day page that will show all events for the provided date in the url - updated event day menu to point to the new day page

--- a/config/locales/default.de.yml
+++ b/config/locales/default.de.yml
@@ -197,6 +197,13 @@ de:
       long: ! '%A, %d. %B %Y, %H:%M Uhr'
       short: ! '%d. %B, %H:%M Uhr'
     pm: nachmittags
+
+  formtastic:
+    create: "Schaffen"
+    update: "Aktualisieren"
+    submit: "Einreichen"
+
+
   # remove these aliases after 'activemodel' and 'activerecord' namespaces are removed from Rails repository
   activemodel:
     errors:
