--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -2,15 +2,16 @@
 ka:
   app:
     buttons:
-      pdf: Download PDF
-      ics: Download Calendar
+      pdf: Download Event Info
+      ics: Add to Your Calendar
       reset: Reset
       cancel: Cancel
       back: Back
       edit: Edit
       delete: Delete
-      new_category: New
-      new_event: New Category
+      list: View All
+      new_category: New Category
+      new_event: New Event
       new_page: New Page
       new_sponsor: New Sponsor
     msgs:
