created sponsor type table; created page to view sponsors by type; updated list of logos in app layout footer to load all organization sponsor types; must run rake db:seed for code to work

--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -92,6 +92,8 @@ ka:
       title: New Sponsor
     show:
       contact_header: Sponsor Contact Information
-
+    view:
+      no_sponsor_by_type: There are no records on file for %{type}
+      
 
 
