--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -92,4 +92,6 @@ de:
       title: New Sponsor
     show:
       contact_header: Sponsor Contact Information
+    view:
+      no_sponsor_by_type: There are no records on file for %{type}
 
