--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -92,6 +92,8 @@ en:
       title: New Sponsor
     show:
       contact_header: Sponsor Contact Information
+    view:
+      no_sponsor_by_type: There are no records on file for %{type}
 
 
 
