--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,98 +1,96 @@
-# encoding: utf-8
+# encoding: utf8
 de:
   app:
     buttons:
-      pdf: Download Event Info
-      ics: Add to Your Calendar
-      reset: Reset
-      cancel: Cancel
-      back: Back
-      edit: Edit
-      delete: Delete
-      list: View All
-      search: Search
-      new_category: New Category
-      new_event: New Event
-      new_page: New Page
-      new_sponsor: New Sponsor
+      pdf: Download Veranstaltungsinformationen
+      ics: Zum Kalender hinzufügen
+      reset: Zurücksetzen
+      cancel: Abbrechen
+      back: Zurück
+      edit: Hinzufügen
+      delete: Löschen
+      list: Alle ansehen
+      search: Suche
+      new_category: Neue Kategorie
+      new_event: Neue Veranstaltung
+      new_page: Neue Seite
+      new_sponsor: Neuer Sponsor
     msgs:
-      no_events_for_date: There are no events for this date.
-      no_events_for_cat: No events exist for this category.
-      delete_confirm: Are you sure?
-      map_no_events: "Sorry, there are no events for the selected day and category.  Please select a different day or category."
-      loading: Loading...
+      no_events_for_date: Keine Einträge für dieses Datum.
+      no_events_for_cat: Keine Einträge für diese Kategorie.
+      delete_confirm: Sind Sie sicher?
+      map_no_events: "Sorry, für diesen Tag lassen sich keine Einträge finden. Sorry, für diese Kategorie lassen sich keine Einträge finden. Bitte wählen Sie einen anderen Tag. Bitte wählen Sie eine andere Kategorie."
+      loading: Loading... #
     common:
       name: Name
-      title: Title
-      description: Description
-      categories: Categories
-      location: Location
+      title: Titel
+      description: Beschreibung
+      categories: Categories #
+      location: Ort
       fax: Fax
   layouts:
     application:
       menu: Menu
-      about: Über
-      comp: wettbewerb
-      contact: kontakt
-      admin: Admin
+      contact: Kontakt
+      admin: Administrator
       home: Home
-      map: Map
-      categories: Categories
-      events: Events
-      sponsors: Sponsors
-      sign_out: Sign Out
-      sign_in: Sign In
-      sign_up: Sign Up
-      copyright: Copyright © 2012  All Rights Reserved.
-      jumpstart_link: Created by JumpStart Georgia
+      map: Karte
+      categories: Categories #
+      events: Events #
+      sponsors: Sponsors #
+      sign_out: Abmelden
+      sign_in: Anmelden
+      sign_up: Anmelden
+      copyright: Copyright © 2012  All Rights Reserved. #
+      jumpstart_link: Created by JumpStart Georgia #
   german_week:
     index:
       title: Deutsche Woche
     search:
-      title: Search for Events
-      location: Location
-      categories: Categories
+      title: Search for Events #
+      location: Ort
+      categories: Categories #
   map:
     index:
-      category: Category
+      category: Kategorie
   events:
     category:
-      title: Events by Category
+      title: Veranstaltung nach Kategorie
     day:
-      title: Events on %{date}
+      title: Veranstaltung nach %{date}
     edit:
-      title: Edit Event
+      title: Veranstaltung hinzufügen
     index:
-      title: Events 
+      title: Events  #
     new:
-      title: New Event
+      title: Neue Veranstaltung
     show:
-      contact_header: Event Contact Information
-      sponsor_header: Event Organizers
-      category_header: Event Categories 
+      contact_header: Kontakt zum Veranstalter
+      sponsor_header: Veranstalter
+      category_header: Veranstaltungskategorie
   categories:
     edit:
-      title: Edit Category
+      title: Kategorie hinzufügen
     index:
-      title: Categories 
+      title: Categories #
     new:
-      title: New Category
+      title: Neue Kategorie
   pages:
     edit:
-      title: Edit Page
+      title: Seite hinzufügen
     index:
-      title: Pages 
+      title: Pages #
     new:
-      title: New Page
+      title: Neue Seite
   sponsors:
     edit:
-      title: Edit Sponsor
+      title: Sponsoren hinzufügen
     index:
-      title: Sponsors
+      title: Sponsors #
     new:
-      title: New Sponsor
+      title: Neuer Sponsor
     show:
-      contact_header: Sponsor Contact Information
+      contact_header: Kontaktinformationen über Sponsoren
     view:
-      no_sponsor_by_type: There are no records on file for %{type}
+      no_sponsor_by_type: There are no records on file for %{type} #
 
