--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -40,6 +40,7 @@ ka:
       categories: Categories
       events: Events
       sponsors: Sponsors
+      pages: Pages
       sign_out: Sign Out
       sign_in: Sign In
       sign_up: Sign Up
