updated forms so locale assigned to correct data; trying to get pdf to work

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -41,7 +41,7 @@ de:
       pages: Seiten
       sign_out: Abmelden
       sign_in: Anmelden
-      sign_up: Anmelden
+      sign_up: Registrieren
       copyright: Copyright © 2012  All Rights Reserved. 
       jumpstart_link: Created by JumpStart Georgia 
   german_week:
