added link to disclaimer page; updated text in logo to use translations

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -45,6 +45,8 @@ de:
       sign_up: Registrieren
       copyright: Copyright © 2012  All Rights Reserved. 
       jumpstart_link: Created by JumpStart Georgia 
+      disclaimer: Haftungsausschluss
+      logo_text: Deutsche Woche
   german_week:
     index:
       title: Deutsche Woche
