--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -47,6 +47,8 @@ ka:
       sign_up: Sign Up
       copyright: Copyright © 2012  All Rights Reserved.
       jumpstart_link: Created by JumpStart Georgia
+      disclaimer: Disclaimer
+      logo_text: German Week
   german_week:
     index:
       title: German Week
