--- a/config/locales/default.de.yml
+++ b/config/locales/default.de.yml
@@ -196,6 +196,7 @@ de:
       default: ! '%A, %d. %B %Y, %H:%M Uhr'
       long: ! '%A, %d. %B %Y, %H:%M Uhr'
       short: ! '%d. %B, %H:%M Uhr'
+      time_only: ! '%H:%M Uhr'
     pm: nachmittags
 
 
