--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -198,6 +198,7 @@ en:
       default: ! '%a, %d %b %Y %H:%M:%S %z'
       long: ! '%B %d, %Y %H:%M'
       short: ! '%d %b %H:%M'
+      time_only: ! '%H:%M'
     pm: pm
 
   # remove these aliases after 'activemodel' and 'activerecord' namespaces are removed from Rails repository
