--- a/config/locales/default.ka.yml
+++ b/config/locales/default.ka.yml
@@ -22,6 +22,7 @@ ka:
       default: "%a, %d %b %Y %H:%M:%S %z"
       short: "%d %b %H:%M"
       long: "%d %b %Y %H:%M"
+      time_only: ! '%H:%M'
     am: "am"
     pm: "pm"
 
