--- a/config/locales/wp.de.yml
+++ b/config/locales/wp.de.yml
@@ -14,4 +14,4 @@ de:
         other: Zeige <b>alle&nbsp;%{count}</b> %{model}
         zero: Kein(e) %{model} gefunden
     page_gap: ! '&hellip;'
-    previous_label: ← Vorige
+    previous_label: ← Zurück
