made translation changes; on event show split event location and event contact into two areas

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -77,7 +77,8 @@ de:
     new:
       title: Neue Veranstaltung
     show:
-      contact_header: Veranstaltungsort
+      place_event: Veranstaltungsort
+      contact: Kontakt zum Veranstalter
       sponsor_header_org: Veranstalter
       sponsor_header_sponsor: Sponsoren
       category_header: Veranstaltungskategorie
