--- a/config/locales/default.de.yml
+++ b/config/locales/default.de.yml
@@ -37,6 +37,7 @@ de:
       default: ! '%d.%m.%Y'
       long: ! '%e. %B %Y'
       short: ! '%e. %b'
+      with_day: ! '%A, %d. %B %Y'
     month_names:
     - 
     - Januar
