--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -37,6 +37,7 @@ en:
       default: ! '%Y-%m-%d'
       long: ! '%B %d, %Y'
       short: ! '%b %d'
+      with_day: ! '%A, %B %d %Y'
     month_names:
     - 
     - January
