--- a/config/locales/ka.yml
+++ b/config/locales/ka.yml
@@ -23,6 +23,7 @@ ka:
       new_event: ახალი ღონისძიება
       new_page: ახალი გვერდი
       new_sponsor: ახალი სპონსორი
+      new_image_header: New Image Header
       add_address_map: დაამატე მისამართი რუკაზე
     msgs:
       no_events_for_date: ამ თარიღისათვის ჩანაწერი არ მოიძებნა.
@@ -48,6 +49,7 @@ ka:
       events: ღონისძიებები
       sponsors: სპონსორები
       pages: გვერდები
+      image_headers: Image Headers
       sign_out: გამოსვლა
       sign_in: შესვლა
       sign_up: Sign Up
@@ -107,6 +109,13 @@ ka:
       contact_header: სპონსორების საკონტაქტო ინფორმაცია
     view:
       no_sponsor_by_type: ინფორმაცია ამ მონაცემის შესახებ არ მოიძებნა %{type}
-      
-
+  image_headers:
+    edit:
+      title: Edit Image Header
+    index:
+      title: Image Headers
+    new:
+      title: New Image Header
+    show:
+      title: Image Header
 
