changed formatting of event day title as requested; changed route so home page will be /de instead of /?locale=de

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -71,7 +71,7 @@ de:
     category:
       title: Veranstaltungskategorien
     day:
-      title: "Veranstaltungen, am %{date}"
+      title: "Veranstaltungen am %{date}"
     edit:
       title: Veranstaltung hinzufügen
     index:
